# gtestTutorialProject

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  PrimeChecker.h  TablePrimeChecker.cpp  TablePrimeChecker.h
test/: CMakeLists.txt  TablePrimeCheckerTest.cpp
